--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,28 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+### Editors ###
+.vscode/
+coverage
+target/
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+!**/cdk.out
+infrastructure/cdk.out
+functions/cdk.out
+common/cdk.out
+*.DS_Store
+.venv
+__pycache__
+*.bat
