--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+
+        <!-- eclipse apt switch -->
+        <m2e.apt.activation>jdt_apt</m2e.apt.activation>
     </properties>
 
     <dependencies>
@@ -235,5 +238,13 @@
             <version>3.25.3</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- funktioniert mäßig -->
+<!--        <dependency>-->
+<!--            <groupId>io.soabase.record-builder</groupId>-->
+<!--            <artifactId>record-builder-processor</artifactId>-->
+<!--            <version>41</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
